# ncappzoo

apps/benchmarkncs/: Makefile  benchmarkncs.py
apps/mnist_calc/: Makefile  mnist_processor.py  touchcalc.py
apps/simple_classifier/: CMakeLists.txt
apps/simple_classifier_py/: Makefile
apps/street_cam_threaded/: Makefile  googlenet_processor.py  street_cam_threaded.py  tiny_yolo_processor.py
apps/video_objects_scalable/: Makefile  ssd_mobilenet_processor.py  video_objects_scalable.py  video_processor.py
caffe/AgeNet/: Makefile
caffe/AlexNet/: Makefile
caffe/GenderNet/: Makefile
caffe/GoogLeNet/: Makefile
caffe/ResNet-18/: Makefile
caffe/SSD_MobileNet/: Makefile
caffe/SqueezeNet/: Makefile
caffe/TinyYolo/: Makefile  run.py
tensorflow/facenet/: Makefile
tensorflow/inception/: Makefile
tensorflow/inception_resnet_v2/: Makefile
tensorflow/mnist/: Makefile
tensorflow/mobilenets/: Makefile
tensorflow/ssd_mobilenet_v2/: Makefile
